5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1723_2508.log
== TEST (2019-05-12 10:08:10) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = soma + (((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- ERROR:
File "XXXX", line 10
    x = x + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:08:43) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:10:52) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + total, 8))

-- OUTPUT:
3.01851852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:11:18) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.45601852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:11:29) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.45601852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:16:33) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.03703704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:16:37) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.03703704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:16:56) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
total = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.03703704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:17:08) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
total = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.03703704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:17:14) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
total = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.03703704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:17:22) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
total = 0
while(n > i):
	total = 4/((x+2)*(y+2)*(z+2))
	soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.03703704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:20:40) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
total = 0
while(n > i):
	soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.01851852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:21:08) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.45601852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:21:15) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.45601852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:21:20) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.45601852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:21:31) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 0
z = 0
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.45601852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:22:29) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:22:44) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:22:50) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:22:51) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	soma = soma + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:25:02) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:31:37) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:36:31) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:36:36) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 2
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:37:06) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 1
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:37:11) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 1
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:37:18) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 3
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
2.86666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:37:22) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 3
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
2.86666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:37:31) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 0
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:37:38) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
y = 1
z = 2
i = 0
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	y = y + 2
	z = z + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:49:02) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 0
x = 2
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x)*(x+1)*(x+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(n > i):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:49:34) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 2
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x)*(x+1)*(x+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:52:48) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 2
soma = 0
while(n > i):
	soma = soma + total
	total = ((-1)**i) * 4/((x)*(x+1)*(x+2)
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- ERROR:
File "XXXX", line 11
    x = x + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:52:56) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 2
soma = 0
while(n > i):
	soma = soma + total
	total = ((-1)**i) * 4/((x)*(x+1)*(x+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:53:06) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 2
soma = 0
while(n > i):
	soma = soma + total
	total = ((-1)**i) * 4/((x)*(x+1)*(x+2))
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:54:07) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 2
soma = 0
while(n > i):
	total = ((-1)**i) * 4/((x)*(x+1)*(x+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.1452381
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:55:54) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 1
soma = 0
while(n > i):
	total = ((-1)**(i+1) * 4/((x)*(x+1)*(x+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- ERROR:
File "XXXX", line 8
    soma = soma + total
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:56:06) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 1
soma = 0
while(n > i):
	total = ((-1)**(i+1)) * 4/((x)*(x+1)*(x+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:56:25) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 1
soma = 0
while(n > i):
	total = ((-1)**(i+1)) * 4/((x)*(x+1)*(x+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 10:59:15) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
x = 2
i = 1
soma = 0
while(n > i):
	total = ((-1)**(i+1)) * 4/((x)*(x+1)*(x+2))
	soma = soma + total
	#total = 4/((x+2)*(y+2)*(z+2))
	#soma = total + ((-1)**i) * 4/((x+2)*(y+2)*(z+2))
	x = x + 2
	i = i + 1
print(round(3 + soma, 8))

-- EXECUTION TIME:
0.251794
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
